--- a/redis-back/business-layer/package.json
+++ b/redis-back/business-layer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "business-logic",
+  "name": "business-layer",
   "version": "1.0.0",
   "description": "This contains all the application logic",
   "license": "ISC",
