--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/orchestrator/node_modules/
-/orchestrator/dist
-/orchestrator/redis-manager/node_modules
-/orchestrator/redis-manager/build
-/orchestrator/.env
+/redis-back/business-layer/node_modules/
+/redis-back/business-layer/dist
+/redis-back/business-layer/.env
+/redis-back/service-layer/node_modules
+/redis-back/service-layer/build
