--- a/redis-back/package.json
+++ b/redis-back/package.json
@@ -1,7 +1,7 @@
 {
   "name": "redis-back",
   "version": "1.0.0",
-  "workspaces":[
+  "workspaces": [
     "business-layer",
     "service-layer"
   ],
@@ -12,5 +12,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "typescript": "^5.9.3"
   }
 }
