--- a/redis-back/business-layer/package.json
+++ b/redis-back/business-layer/package.json
@@ -7,15 +7,23 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx tsc -b"
   },
   "dependencies": {
     "@redis/service": "*",
     "@types/express": "^5.0.6",
     "@upstash/redis": "^1.36.1",
+    "bcrypt": "^6.0.0",
     "express": "^5.2.1",
     "fastforwardit": "^1.0.1",
+    "jsonwebtoken": "^9.0.3",
+    "pg": "^8.17.2",
     "uuid": "^13.0.0",
     "zod": "^4.3.6"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/pg": "^8.16.0"
   }
 }
