--- a/redis-back/service-layer/package.json
+++ b/redis-back/service-layer/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/dockerode": "^4.0.1",
     "crypto": "^1.0.1",
-    "dockerode": "^4.0.9"
+    "dockerode": "^4.0.9",
+    "node-cron": "^4.2.1"
   }
 }
