--- a/redis-back/package.json
+++ b/redis-back/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "cors": "^2.8.6",
     "typescript": "^5.9.3"
   }
 }
